# restDAQ

./: .clang-format  CMakeLists.txt  README.md  main.cxx  restDAQManager.cxx
.github/: pr-badge.yml
.github/workflows/: github-actions-demo.yml  validation.yml
cmake/: source.cmake
daq/: ARCPacket.cxx  ARCPacket.h  CMakeLists.txt  DCCPacket.cxx  DCCPacket.h  FEMINOSPacket.cxx  FEMINOSPacket.h  FEMProxy.h  TRESTDAQ.cxx  TRESTDAQ.h  TRESTDAQARC.cxx  TRESTDAQARC.h  TRESTDAQDCC.cxx  TRESTDAQDCC.h  TRESTDAQDummy.cxx  TRESTDAQDummy.h  TRESTDAQException.h  TRESTDAQFEMINOS.cxx  TRESTDAQFEMINOS.h  TRESTDAQManager.cxx  TRESTDAQManager.h  TRESTDAQSocket.cxx  TRESTDAQSocket.h
daq/DCC/: after.h  bufpool_err.h  busymeter.h  dcc.h  endofevent_packet.c  endofevent_packet.h  err_codes.h  ethpacket.c  ethpacket.h  fem.h  gblink.c  gblink.h  gblink_ps.h  histo.h  pedestal_packet.c  pedestal_packet.h  platform_spec.h  sock_util.h
daq/TRESTDAQ/: DCCPacket.cxx  DCCPacket.h  TRESTDAQ.cxx  TRESTDAQ.h  TRESTDAQDCC.cxx  TRESTDAQDCC.h  TRESTDAQDummy.cxx  TRESTDAQDummy.h  TRESTDAQManager.cxx  TRESTDAQManager.h
examples/: DAQGUI.rml  DummyReadout.root  dummyDAQ.rml
gui/: CMakeLists.txt  TRestDAQGUI.cxx  TRestDAQGUI.h  TRestDAQGUILinkDef.h  TRestDAQGUIMetadata.cxx  TRestDAQGUIMetadata.h  TRestDAQGUIMetadataLinkDef.h
macros/: REST_DAQGUI.C
programs/: CMakeLists.txt  DCCDAQ.cxx  clientDCC.cxx  restDAQManager.cxx
